# mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-windows.sh  toolchain-mingw.cmake
shaders/: mandelbrot.frag
src/: main.cpp  mandelbrot.cpp  mandelbrot.h  renderer.cpp  renderer.h  ui.cpp  ui.h
